# outage-prediction-and-grid-reliability

./: .gitignore  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
data/: kplc_interruption_data.json
docs/: api.md  data_pipeline.md  deployment.md  faq.md  index.md  model_training.md  tutorials.md  visualization.md
models/: README.md  all_metrics.json  best_model_metadata.json  gradient_boosting_baseline_metadata.json  lightgbm_baseline_metadata.json  logistic_regression_baseline_metadata.json  random_forest_baseline_metadata.json  xgboost_baseline_metadata.json
models/evaluation/: detailed_metrics.json  evaluation_report.md  model_comparison.csv
reports/figures/: .gitkeep
reports/presentations/: .gitkeep
scripts/: create_dashboard.py  run_eda.py  train_model.py  train_model_new.py
src/: __init__.py  config.py
src/data/: __init__.py  data_loader.py  load_data.py  preprocess.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  evaluator.py  model_trainer.py  train_model.py
src/visualization/: __init__.py  visualize.py
tests/: conftest.py
tests/unit/: test_data.py  test_features.py  test_models.py
