[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outage-prediction-grid-reliability"
version = "0.1.0"
description = "Outage Prediction and Grid Reliability for Kenya Power"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Julie Mugira" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "geopandas>=0.13.0",
    "folium>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.0",
]
docs = ["mkdocs>=1.4.0", "mkdocs-material>=9.0.0", "sphinx>=7.0.0"]
web = ["streamlit>=1.24.0", "fastapi>=0.100.0", "uvicorn>=0.22.0"]

[project.urls]
Homepage = "https://github.com/jm-wanja/outage-prediction-grid-reliability"
Documentation = "https://jm-wanja.github.io/outage-prediction-grid-reliability"
Repository = "https://github.com/jm-wanja/outage-prediction-grid-reliability"
Issues = "https://github.com/jm-wanja/outage-prediction-grid-reliability/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
outage_prediction = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "geopandas.*",
    "folium.*",
]
ignore_missing_imports = true
